feat: add tenant operator import (#51)